<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/form_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="textCapWords"
        android:hint="@string/HintNome"/>
    <EditText
        android:id="@+id/form_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="number"
        android:hint="@string/HintTelefone"/>
    <EditText
        android:id="@+id/form_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="textEmailAddress"
        android:hint="@string/HintEmail"/>
    <Button
        android:id="@+id/form_botao_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/ButtonSave"/>
</LinearLayout>